@@ -2764,18 +2764,18 @@ calls svnadmin dump in its default mode generating version 2.
 Certain optional modifiers on the `<<read_cmd>>` command change
 its behavior when reading Subversion repositories:
 
-`--nobranch`::
+--nobranch::
 Suppress branch analysis. The generated git repository will mirror the
 whole subversion tree, with trunk and branches (if they exist) as
 subdirectories.  No directory deletions are translated to branch
 deletions, since no directories are seen as branches in the first
 place.
 
-`--ignore-properties`::
+--ignore-properties::
 Suppress read-time warnings about discarded property
 settings.
 
-`--user-ignores`::
+--user-ignores::
 By default reposurgeon tosses out in-tree _.gitignore_ files found in the
 history because they probably come from git-svn users who checked-in
 their own _.gitignore_ files. Using this option makes reposurgeon
@@ -2783,20 +2783,20 @@ keep the content of these files and merge them with
 the _.gitignore_ files generated from `svn:ignore` and `svn:global-ignores`
 properties, if any.
 
-`--use-uuid`::
+--use-uuid::
 If the `--use-uuid` read option is set, the repository's
 UUID will be used as the hostname when faking up email addresses, a la
 `git-svn`.  Otherwise, addresses will be generated the way `git cvs-import` does
 it, simply copying the username into the address field.
 
-`--no-automatic-ignores`::
+--no-automatic-ignores::
 Do not generate _.gitignore_ files from `svn:ignore` and
 `svn:global-ignores` properties. If `--user-ignores` is also used
 then only _.gitignore_ files that were present in the SVN tree will
 exist in the final repository. If `--user-ignores` is not used,
 no _.gitignore_ file at all will survive the conversion.
 
-`--preserve`::
+--preserve::
 When a branch or tag was deleted in SVN, preserve the history up to
 deletion in a git ref under `refs/deleted/`, instead of deleting the
 branch and only keeping the commits that are also part of the history
@@ -2809,11 +2809,34 @@ thousands of dead branches. While it is important that content copies
 from dead branches be resolved correctly, the branches themselves are
 almost never interesting.)
 
-`--cvsignores`::
+--cvsignores::
 Suppress the normal deletion of _.cvsignore_ files.
+
+The following options to the read command control the branchify set
+and how branch and tag names are to be rewritten as they are read from
+the Subversion repository.
+
+[[branchify_opt]]
+include::docinclude/branchify.adoc[]
+
+[[branchmap_opt]]
+include::docinclude/branchmap.adoc[]
 
 These modifiers can go anywhere in any order on the command line after
 the `<<read_cmd>>` verb. They must be whitespace-separated.
+
+As stacking up read options can resilt in a very long read invocation
+line, it;'s useful to know that \ is sccepted as a comtinuation
+chracter.  Thus, you can do something like this, which is an actual
+line from reposurgeon's test suite:
+
+----
+read <nesting.svn \
+     --branchify=cpp-msbuild/trunk:cpp-msbuild/branches/*:cpp-msbuild/tags/* \
+     --branchmap=@cpp-msbuild/trunk/@heads/master@ \
+     --branchmap=@cpp-msbuild/tags/(.*)/@tags/\1@
+----
+
 
 It is also possible to embed a magic comment in a Subversion stream
 file to set these options (this is mainly useful in test
@@ -2830,7 +2853,7 @@ Subversion repository to branches:
 
 * At any given time there is a set of eligible paths and path
 wildcards which declare potential branches.  See the documentation of
-the `<<branchify_cmd>>` command for how to alter this set, which
+the `<<branchify>>` read option for how to alter this set, which
 initially consists of {`+trunk+`, `+tags/*+`, `+branches/*+`, and `*`}.
 
 * A repository is considered "`__flat__`" if it has no
@@ -2854,7 +2877,7 @@ branch.
 * If an element of the branchify set ends with `+/*+`, it is
 considered a branch namespace: each immediate subdirectory of it is
 considered a potential branch, unless it itself appears in
-`<<branchify_cmd>>` as a namespace.  If `*` is in the branchify set
+`<<branchify>>` as a namespace.  If `*` is in the branchify set
 (which is true by default) all top-level directories are also
 considered potential branches (other than `/trunk` which is mapped to
 `master`, and `/tags` and `/branches` which are namespaces by
@@ -2863,11 +2886,11 @@ default).
 * Files in the top-level directory are assigned to a synthetic branch
 named '```unbranched```'. If there is no "trunk", then this synthetic
 '```unbranched```' branch becomes the master branch. You can map
-another directory to master using `<<branchify_cmd>>` and
-`<<branchmap_cmd>>`. If the Subversion repository has a branch named
-'```unbranched```' the name '```unbranched-bis```' is used instead;
-actually, '```-bis```' is appended enough times to get to an unused
-branch name.
+another directory to master using the read options `<<branchify_opt>>`
+and `<<branchmap_cmd>>`. If the Subversion repository has a branch
+named '```unbranched```' the name '```unbranched-bis```' is used
+instead; actually, '```-bis```' is appended enough times to get to an
+unused branch name.
 
 * Each potential branch is checked to see if it has commits on it
 after the initial creation or copy.  If there are such commits, or if the
@@ -3002,17 +3025,6 @@ Detected link from <__revision__> to <__revision__> might be dubious::
    all the same. The link should probably be monitored because it has a
    non-negligible probability of being slightly wrong. This does not impact
    the tree contents, only the quality of the history.
-
-[[branchification]]
-=== Branchification
-
-These commands control the branchify set, defined earlier, and how
-branch and tag names are to be rewritten as they are read from the
-Subversion repository.
-
-include::docinclude/branchify.adoc[]
-
-include::docinclude/branchmap.adoc[]
 
 [[midbranch]]
 === Mid-branch deletions
@@ -3393,6 +3405,10 @@ changes to the command language don't have a high cost in pain to
 users, and the maintainers feel free to make them whenever improvement
 seems possible.  But just in case, such changes are recorded here.
 
+In versions 4.22 and rearlier, the "--branchify"
+and "--branchmap" read options were separate commands that needed
+to be inoked before the read and set hidden global context.
+
 In versions before 4.10, the "reduce" and "blob" options of the
 "<<strip_cmd>>" command were bare keywords. Also the options of the
 "<<ignores_cmd>>" command were bare keywords. There was a command to
@@ -3407,7 +3423,7 @@ In versions before 4.1, the `<<index_cmd>>` command did not see blobs
 by default.
 
 In versions before 4.0, `<<msgin_cmd>>` and `<<msgout_cmd>>` were
-named "mailbox_in" and "mailbox_out:"; `<<branchify_cmd>>` was
+named "mailbox_in" and "mailbox_out:"; `<<branchify_opt>>` was
 "branchify_map". Previous versions used the Python variant of regular
 expressions; some of the more idiosyncratic features of these are not
 replicated in the Go implementation.
