@@ -1,7 +1,5 @@
-## Test branchmap command
-branchify ProjA/trunk ProjB/trunk
-branchmap @^([^/]+)/(.*)/$@heads/\1_\2@
-read <branchmap.svn
+## Test branchmap option
+read --branchify=ProjA/trunk:ProjB/trunk --branchmap=@^([^/]+)/(.*)/$@heads/\1_\2@ <branchmap.svn
 prefer git
 write -
 
