@@ -1,6 +1,5 @@
 ## Test subdirectory branches
-branchify trunk branches/* branches/subdir/*
-read <subdir.svn
+read --branchify=trunk:branches/*:branches/subdir/* <subdir.svn
 prefer git
 # Forces hex hash generation
 <subdir/mybranch> list
